<resources>
    <string name="login_title">Login</string>
    <string name="prod_name">Product Name</string>
    <string name="app_name">My EZ Shopper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">Enter Product Name</string>
    <string name="query_hint">Enter Query Name</string>
    <string name="search_button_text">Search</string>
    <string name="search_all_button_text">Search All</string>
    <string name="profile_search">Search for Products</string>
    <string name="price">Price</string>
    <string name="store_name">Store Name</string>
    <string name="location">Location</string>
    <string name="expiration">Expiration Date</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="title_activity_profile">ProfileActivity2</string>
    <string name="submit_deal_button_text">Submit Deal</string>
    <string name="submit_list_button_text">Submit List Item</string>
    <string name="date_picker_title">Select Expiration Date</string>
    <string name="expiration_hint">Set Expiration Date</string>
    <string name="go_to_new_deal_fragment">+ Deal</string>
    <string name="go_to_new_list_fragment">+ List</string>
    <string name="go_to_search_fragment">Search Products</string>
    <string name="go_to_delete_fragment">Delete User</string>
    <string name="go_to_logout_fragment">Logout</string>
    <string name="go_to_chgpassword_fragment">Change Password</string>
    <string name="invalid_price">Please Enter a Valid Price</string>
    <string name="spinner_category_title">Search By...</string>
    <string name="add_new_item">Add Item to Shopping List:</string>
    <string name="edit_existing_item">Edit Item in Shopping List:</string>
    <string name="edit_text">Edit</string>
</resources>
