<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:background="#303030"
                tools:context="com.ipfw.myezshopper.SearchDeActivity"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_category_title"
            android:layout_margin="12dp"
            android:textColor="#fafafa"
            android:textColorHint="#fafafa"/>
    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="8dp"
        android:background="@drawable/drop_down_gray">
    </Spinner>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtName"
        android:hint="@string/search_hint"
        android:layout_weight="0.1"
        android:textColor="#fafafa"
        android:textColorHint="#fafafa"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:scrollbars="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="0.65"
        android:fillViewport="true">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/product"
        android:layout_weight="0.65"
        android:scrollbars="vertical"
        android:textColor="#fafafa"/>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_button"
        android:text="@string/search_button_text"
        android:layout_gravity="center"
        android:background="@drawable/btn_back"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/search_all_button"
        android:text="@string/search_all_button_text"
        android:background="@drawable/btn_blue_back"
        android:textColor="#ffffff"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/database_response"
        android:textColor="#fafafa"
        style="?android:listSeparatorTextViewStyle"/>

</LinearLayout>
